--- a/htdocs/css/kmom01.css
+++ b/htdocs/css/kmom01.css
@@ -12,7 +12,6 @@
     box-sizing: border-box;
 }
 
-
 /* Hide submenu, leave this to kmom02 */
 .rm-desktop ul {
     display: none;
@@ -26,34 +25,28 @@
 html {
     background-color: #181733;
 }
-/* Container */
 
+/* Container */
 .wrap-all {
     background-color: white;
-    overflow: none;
-    width: 80%;
-    margin: auto;
-}
-
-.outer-wrap {
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
 }
 
 .inner-wrap {
     width: 80%;
-    margin: 0 auto;
+    margin: auto;
 }
-/* Header */
 
+/* Header */
 .region-header-col-1 {
     float: left;
-    width: 30%;
+    width: 15%;
 }
 
 .region-header-col-2 {
     float: left;
-    width: 60%;
-    margin-right: 10px;
+    width: 75%;
 }
 
 .site-logo {
@@ -73,23 +66,77 @@ html {
     display: inline;
     padding: 2px 10px;
 }
-/* Main */
 
+/* Main */
 .inner-wrap-main {
     padding: 30px 0;
+    min-height: 500px;
+
+}
+
+.region-sidebar-right {
+    padding-top: 0px;
+    float: right;
+    width: 20%;
+}
+
+.my-navbar {
+    width: 100%;
+    padding: 1em;
+    height: 50px;
+    font-size: 20px;
+}
+
+.region-sidebar-left {
+    float: left;
+    width: 20%;
+}
+
+.region-main.has-sidebar-left {
+	display: inline;
+	float: left;
+	width: 60%;
+}
+
+.region-main.has-sidebar-left p{
+	margin-bottom: 1em;
+}
+.toc {
+    list-style-type: none;
+    padding-top: 1em;
+}
+
+.toc li {
+    padding-top: 0.5em;
 }
 
 /* Footer */
 .outer-wrap-footer {
+    float: none;
     background-color: #181733;
     color: white;
+    width: 100%;
 }
 
 .inner-wrap-footer {
-    padding: 30px;
+    width: 100%;
+    height: 100%;
+}
+
+.footer-column {
+    width: 33%;
+    float: left;
+    text-align: center;
+    border: 3px solid grey;
+    border-collapse: collapse;
+}
+
+.footer-column a {
+    color: #fff;
 }
 
 .region-footer>.block {
+    margin-top: 2em;
     padding: 30px;
     width: 100%;
     text-align: center;
