--- a/htdocs/css/kmom03.css
+++ b/htdocs/css/kmom03.css
@@ -1,9 +1,16 @@
 /*!
- * LESS version of the stylesheet for design kmom02.
+ * LESS version of the stylesheet for design kmom03.
  *
- * This stylesheet is for the design course and kmom02. Its intention is to
+ * This stylesheet is for the design course and kmom03. Its intention is to
  * use kmom01.css and lessify the style and use this as a wrapper for the new
  * style.
+ */
+/**
+*Import mixins
+*/
+/**
+ * A small clearfix:
+ * http://stackoverflow.com/questions/211383/what-methods-of-clearfix-can-i-use
  */
 /**
  * Normalize and reset the style.
@@ -4973,6 +4980,299 @@ a.rm-button.rm-clicked .rm-button-face-2 {
     display: none;
   }
 }
+/*
+* Import typohrapghic grid.
+*/
+/**
+ * Typographic font families to choose from.
+ */
+/**
+ * Typographic defaults.
+ */
+#desinax-hgrid {
+  /**
+     * Mixins used when setting default fonts
+     */
+  /**
+     * Settings for headings H1-H6
+     */
+  /**
+     * Text elements
+     */
+  /**
+     * Display source code.
+     */
+  /**
+     * Lists
+     */
+  /**
+     * Tables. Because of the need for padding on TH and TD, the vertical rhythm
+     * on table cells has to be 1.5*@magic-number.
+     */
+  /**
+     * More typography elements
+     */
+  /**
+     * Enable all default typographic elements.
+     */
+}
+/**
+* Import the vertical grid.
+*/
+/**
+ * Fluid and Responsive Vertical Grid
+ */
+/**
+ * Namespace what could be namespaced
+ */
+#desinax-vgrid {
+  /**
+     * Wrap grid in a container.
+     */
+  /**
+     * Show grid.
+     */
+  /**
+     * All columns must be wrapped in a row.
+     */
+  /**
+     * Create a column spanning @col columns.
+     */
+  /**
+     * Push a column @offset columns.
+     */
+  /**
+     * Pull a column left @offset columns.
+     */
+  /**
+     * Pull a column right @offset columns.
+     */
+}
+/**
+ * Layout using vgrid
+ * 
+ */
+/**
+ * Variables
+ */
+/**
+ * General layout
+ */
+.row {
+  display: block;
+  width: 101.04166667%;
+  margin-left: -0.52083333%;
+  margin-right: -0.52083333%;
+  margin-bottom: 12px;
+}
+.row::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.wrap-all {
+  background-color: white;
+  width: 90%;
+  margin: 0 auto;
+}
+.inner-wrap {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1100px;
+}
+.inner-wrap-header {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 95%;
+}
+.vgrid .inner-wrap {
+  background: url("../img/grid_24x30x10-nomargin.png") repeat-y scroll center center;
+  background-size: 100% auto;
+}
+@media (min-width: 1100px) {
+  .vgrid .inner-wrap {
+    background-size: 1100px auto;
+  }
+}
+.vgrid .inner-wrap.inner-wrap-header {
+  background: url("../img/grid_24x30x10-nomargin.png") repeat-y scroll center center;
+  background-size: 100% auto;
+}
+@media (min-width: 100%) {
+  .vgrid .inner-wrap.inner-wrap-header {
+    background-size: 100% auto;
+  }
+}
+.site-logo img {
+  display: none;
+}
+.region-header-col-1,
+.region-header-col-3 {
+  display: inline;
+  float: left;
+  width: 11.45833333%;
+  margin-left: 0.52083333%;
+  margin-right: 0.52083333%;
+}
+.region-header-col-2 {
+  display: inline;
+  float: left;
+  width: 73.95833333%;
+  margin-left: 0.52083333%;
+  margin-right: 0.52083333%;
+}
+.my-navbar {
+  font-size: 1.5em;
+  text-align: center;
+  line-height: 1;
+}
+.rm-default li {
+  display: inline-block;
+}
+.rm-mobile li {
+  display: list-item;
+}
+.region-flash {
+  display: inline;
+  float: left;
+  width: 98.95833333%;
+  margin-left: 0.52083333%;
+  margin-right: 0.52083333%;
+}
+.outer-wrap-flash {
+  border-bottom: 5px solid #181733;
+}
+.region-breadcrumb {
+  display: inline;
+  float: left;
+  width: 98.95833333%;
+  margin-left: 0.52083333%;
+  margin-right: 0.52083333%;
+  padding: 0;
+}
+.region-breadcrumb li {
+  list-style-type: none;
+  display: inline;
+}
+.region-breadcrumb li a {
+  text-decoration: none;
+}
+.region-breadcrumb.breadcrumb-list {
+  font-size: 12.32px;
+}
+.region-breadcrumb.breadcrumb-list ul {
+  padding: 0;
+  margin: 0;
+}
+.region-breadcrumb.breadcrumb-list ul a {
+  color: #333;
+}
+.region-main {
+  display: inline;
+  float: left;
+  width: 73.95833333%;
+  margin-left: 0.52083333%;
+  margin-right: 0.52083333%;
+  margin-left: 8.85416667%;
+}
+.region-main p {
+  margin-bottom: 24px;
+}
+.region-main.has-sidebar {
+  margin-left: 0.52083333%;
+}
+.region-main.has-sidebar-right {
+  display: inline;
+  float: left;
+  width: 69.79166667%;
+  margin-left: 0.52083333%;
+  margin-right: 0.52083333%;
+}
+.region-main.has-sidebar-left {
+  display: inline;
+  float: left;
+  width: 69.79166667%;
+  margin-left: 0.52083333%;
+  margin-right: 0.52083333%;
+  margin-left: 4.6875%;
+}
+.region-main.has-sidebar-left.has-sidebar-right {
+  margin-left: 4.6875%;
+  display: inline;
+  float: left;
+  width: 48.95833333%;
+  margin-left: 0.52083333%;
+  margin-right: 0.52083333%;
+}
+.next-previous .next {
+  float: right;
+}
+.next-previous .previous {
+  float: left;
+}
+.region-sidebar-right,
+.region-sidebar-left {
+  display: inline;
+  float: left;
+  width: 23.95833333%;
+  margin-left: 0.52083333%;
+  margin-right: 0.52083333%;
+}
+.region-sidebar-right .block,
+.region-sidebar-left .block {
+  margin-bottom: 72px;
+}
+.region-sidebar-right {
+  margin-left: 4.6875%;
+}
+.region-sidebar-left.has-sidebar-right,
+.region-sidebar-right.has-sidebar-left {
+  display: inline;
+  float: left;
+  width: 19.79166667%;
+  margin-left: 0.52083333%;
+  margin-right: 0.52083333%;
+}
+.region-sidebar-right.has-sidebar-left {
+  margin-left: 4.6875%;
+}
+.wrap-sidebar .block h4 {
+  border-top: 1px solid #ccc;
+  background-image: linear-gradient(to right, #fff, #ccc);
+}
+.toc {
+  list-style-type: none;
+  padding: 0;
+}
+.outer-wrap-footer {
+  background-color: #fff;
+  border-top: 5px solid #181733;
+}
+.footer-column {
+  display: inline;
+  float: left;
+  width: 32.29166667%;
+  margin-left: 0.52083333%;
+  margin-right: 0.52083333%;
+}
+.footer-column-1,
+.footer-column-2 {
+  border-right: 3px solid #181733;
+}
+.footer-column a {
+  text-decoration: none;
+  color: #181733;
+}
+.site-footer {
+  display: inline;
+  float: left;
+  width: 98.95833333%;
+  margin-left: 0.52083333%;
+  margin-right: 0.52083333%;
+}
+.hgrid .inner-wrap {
+  background-image: url("../img/magic-number-24px.png");
+}
 /**
  * Base style to affect HTML elements on a general scale.
  */
@@ -4988,174 +5288,299 @@ body {
   padding: 0;
   padding-top: 2em;
   color: #333;
-  font: 100.01%/1 serif;
+  font: 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-/**
- * Layout style for general structure of header, navbar, main, footer
- * and other regions of the page including route specific styles.
- */
-/**
- * Layout style for general structure of header, navbar, main, footer
- * and other regions of the page including route specific styles.
- */
-/**
- * Variables
- */
-/**
- * General layout
- */
-.rm-desktop ul {
-  display: none;
+img {
+  max-width: 100%;
 }
-.inner-wrap {
-  width: 80%;
-  margin: auto;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Verdana, Geneva, sans-serif;
+  margin-top: 24px;
+  margin-bottom: 24px;
 }
-.wrap-all {
-  background-color: white;
-  width: 90%;
-  margin: 0 auto;
+h1 img,
+h2 img,
+h3 img,
+h4 img,
+h5 img,
+h6 img {
+  margin: 0;
 }
-.outer-wrap-flash {
-  border-bottom: 5px solid #181733;
+h1 {
+  font-size: 2.375em;
+  line-height: 1.26315789;
+  font-weight: normal;
+  border-bottom: 1px solid #666;
+  margin-bottom: 23px;
 }
-.region-flash {
-  padding-bottom: 0.5em;
+h1 ~ h1,
+h1 ~ h2,
+h1 ~ h3,
+h1 ~ h4,
+h1 ~ h5,
+h1 ~ h6 {
+  margin-top: 48px;
 }
-.region-header-col-1 {
-  float: left;
-  width: 15%;
+h1 + h2 {
+  margin-top: 24px;
 }
-.region-header-col-2 {
-  float: left;
-  width: 75%;
+h2 {
+  font-size: 1.875em;
+  line-height: 1.6;
+  font-weight: normal;
+  margin-bottom: 23px;
+  border-bottom: 1px solid #CCC;
 }
-.site-logo img {
-  width: 100px;
+h2 + h3 {
+  margin-top: 24px;
 }
-.site-logo-text {
-  display: none;
+h3 {
+  font-size: 1.75em;
+  line-height: 1.71428571;
+  font-weight: normal;
+  margin-bottom: 23px;
+  border-bottom: 1px solid #EEE;
 }
-.row::after {
-  clear: both;
+h3 + h4 {
+  margin-top: 24px;
+}
+h4 {
+  font-size: 1.5em;
+  line-height: 1;
+  font-weight: normal;
+  margin-bottom: 23px;
+  border-bottom: 1px solid #EEE;
+}
+h4 + h5 {
+  margin-top: 24px;
+}
+h5 {
+  font-size: 1.25em;
+  line-height: 1.2;
+  margin-bottom: 23px;
+  border-bottom: 1px solid #EEE;
+}
+h5 + h6 {
+  margin-top: 24px;
+}
+h6 {
+  font-size: 1.25em;
+  line-height: 1.2;
+  margin-bottom: 23px;
+  border-bottom: 1px solid #EEE;
+}
+p {
+  margin-bottom: 24px;
+}
+small,
+.small,
+.smaller {
+  font-size: 0.875em;
+}
+strong,
+b {
+  font-weight: bold;
+}
+mark {
+  color: #000;
+  background-color: #ff9;
+}
+abbr[title],
+dfn[title] {
+  text-decoration: dotted underline;
+}
+em,
+i,
+dfn {
+  font-style: italic;
+}
+sub,
+sup {
+  font-size: 0.75em;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+sup {
+  top: -0.5em;
+}
+sub {
+  bottom: -0.25em;
+}
+blockquote {
+  border-left: 4px solid #eee;
+  padding-left: 1em;
+  margin-left: 0;
+  margin-bottom: 24px;
+}
+pre,
+code,
+kbd,
+samp,
+.code {
+  font-family: "Courier New", Courier, monospace;
+}
+code,
+samp {
+  border: 1px solid #ccc;
+  padding-left: 1px;
+  padding-right: 1px;
+}
+code {
+  background-color: #eee;
+}
+pre,
+div.code,
+pre code {
+  font-size: 1em;
+  line-height: 1.5;
+  white-space: pre;
+}
+pre {
+  margin-bottom: 24px;
+}
+pre code {
+  display: block;
   overflow: auto;
 }
-.my-navbar {
-  width: 100%;
-  padding: 1em;
-  font-size: 20px;
-  text-align: center;
-  line-height: 2.5em;
-}
-.my-navbar li {
-  display: inline;
-  padding: 2px 10px;
-}
-.rm-default li {
-  display: inline-block;
-}
-.rm-mobile li {
-  display: list-item;
-}
-.rm-max.rm-navbar {
-  position: absolute;
-  top: 45px;
-  right: 96px;
-}
-/* Main */
-.inner-wrap-main {
-  padding: 30px 0;
-  min-height: 500px;
-  margin-right: auto;
-  margin-left: auto;
-  overflow: auto;
-}
-.next-previous {
-  margin-bottom: 1em;
-}
-.next-previous .next {
-  float: right;
-}
-.next-previous .previous {
-  float: left;
-}
-article p {
-  padding-top: 1em;
-}
-figure.figure.right {
-  float: right;
-  margin-left: 8px;
-}
-.region-sidebar-right {
-  padding-top: 0px;
-  float: left;
-  width: 15%;
-}
-.region-main.has-sidebar-right {
-  display: inline;
-  float: left;
-  width: 65%;
-}
-.region-main.has-sidebar-right h4 {
-  background-color: blue;
-}
-.wrap-sidebar .block h4 {
+div.code,
+pre code {
   border-top: 1px solid #ccc;
-  background-image: linear-gradient(to right, #fff, #ccc);
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 23px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 0.5em;
+  background-color: #eee;
 }
-.region-sidebar-left {
+ul,
+ol {
+  margin-bottom: 24px;
+  padding-left: 1.5em;
+}
+ul p,
+ol p {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+ul ul,
+ol ul,
+ul ol,
+ol ol {
+  margin: 0;
+}
+ul {
+  list-style-type: disc;
+}
+ol {
+  list-style-type: decimal;
+}
+dl {
+  margin-bottom: 24px;
+}
+dl.horizontal dt {
+  clear: left;
   float: left;
-  width: 20%;
+  width: 7em;
 }
-.region-main.has-sidebar-left {
-  display: inline;
-  float: left;
-  width: 60%;
+dl.horizontal dd {
+  margin-left: 8em;
+  display: block;
 }
-.region-main.has-sidebar-left p {
-  margin-bottom: 1em;
+dd {
+  margin-left: 1.5em;
 }
-.toc {
-  list-style-type: none;
-  padding-top: 1em;
+article table,
+.table,
+.table1,
+.table2 {
+  margin-bottom: 24px;
 }
-.toc li {
-  padding-top: 0.5em;
-}
-/* Footer */
-.outer-wrap-footer {
-  float: none;
-  background-color: #fff;
-  border-top: 5px solid #181733;
+table.full-width,
+article .table,
+.table,
+.table2 {
   width: 100%;
 }
-.inner-wrap-footer {
-  width: 100%;
-  height: 100%;
-}
-.footer-column {
-  width: 33%;
-  float: left;
-  text-align: center;
+article table,
+.table,
+.table2 {
   border-collapse: collapse;
+  /*
+            tfoot {
+            }
+            */
 }
-.footer-column-1,
-.footer-column-2 {
-  border-right: 3px solid #181733;
+article table caption,
+.table caption,
+.table2 caption {
+  font-size: 0.875em;
+  line-height: 1.71428571;
+  text-align: left;
+  font-style: italic;
 }
-.footer-column a {
-  text-decoration: none;
-  color: #181733;
+article table thead,
+.table thead,
+.table2 thead {
+  box-shadow: 0 1px 0 #aaa;
 }
-.site-footer p {
-  padding-top: 1em;
+article table th,
+.table th,
+.table2 th {
+  vertical-align: bottom;
+  font-weight: bold;
+  text-align: left;
 }
-.region-footer > .block {
-  margin-top: 2em;
-  padding: 30px;
-  width: 100%;
-  text-align: center;
+article table th,
+.table th,
+.table2 th,
+article table td,
+.table td,
+.table2 td {
+  padding: 6px;
 }
+article table tr,
+.table tr,
+.table2 tr {
+  box-shadow: 0 1px 0 #ccc;
+}
+article table tr:hover,
+.table tr:hover,
+.table2 tr:hover {
+  color: #000;
+  background-color: #f6f6f6;
+  box-shadow: 0 1px 0 #666;
+}
+table.striped tbody tr:nth-child(even) td,
+table.striped tbody tr.even td {
+  background-color: #fafafa;
+}
+hr {
+  position: relative;
+  top: -2px;
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  margin-top: 35px;
+  margin-bottom: 36px;
+}
+hr::after {
+  content: "§";
+  position: relative;
+  top: -0.7em;
+  left: 50%;
+  padding: 0 0.25em;
+  background-color: #fff;
+}
+/**
+ * Layout style for general structure of header, navbar, main, footer
+ * and other regions of the page including route specific styles.
+ */
 /**
  * Layout for responsive style through media queries.
  */
@@ -5180,18 +5605,53 @@ figure.figure.right {
     padding-top: 0;
   }
 }
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1120px) {
   .site-logo {
     display: none;
   }
   .my-navbar {
+    font-size: 1em;
+    line-height: 2.5;
+  }
+}
+@media screen and (max-width: 950px) {
+  .region-main {
+    display: inline;
+    float: left;
+    width: 98.95833333%;
+    margin-left: 0.52083333%;
+    margin-right: 0.52083333%;
+  }
+  .has-sidebar-left.has-sidebar-right {
+    margin-left: 4.6875%;
+    display: inline;
+    float: left;
+    width: 98.95833333%;
+    margin-left: 0.52083333%;
+    margin-right: 0.52083333%;
+  }
+}
+@media screen and (max-width: 750px) {
+  .my-navbar {
     display: none;
   }
-  .region-sidebar-left {
-    display: none;
-  }
+}
+@media screen and (max-width: 700px) {
+  .region-sidebar-left,
   .region-sidebar-right {
-    display: none;
+    display: inline;
+    float: left;
+    width: 98.95833333%;
+    margin-right: 0.52083333%;
+    margin-left: 0.52083333%;
+  }
+  .region-main.has-sidebar-right,
+  .region-main.has-sidebar-left {
+    display: inline;
+    float: left;
+    width: 98.95833333%;
+    margin-right: 0.52083333%;
+    margin-left: 0.52083333%;
   }
 }
 @media screen and (max-width: 400px) {
