--- a/theme/src/layout/responsive_kmom04.less
+++ b/theme/src/layout/responsive_kmom04.less
@@ -18,7 +18,7 @@
     }
 
     .wrap-all {
-        background-color: white;
+        background-color: @bgColorBody;
         width: 100%;
         margin: 0 auto;
     }
