--- a/theme/src/04_colorful.less
+++ b/theme/src/04_colorful.less
@@ -71,8 +71,8 @@
  */
 
 //Fonts
-@fontFamilyHeadings: @fontFamilyVerdana;
-@fontFamilyBody: @fontFamilyHelveticaNeue;
+@fontFamilyBody: "Source Sans Pro", sans-serif;
+@fontFamilyHeadings: 'Noto Serif', serif;
 @fontFamilyCode: @fontFamilyCourier;
 
 // Font size and magic number
