--- a/theme/src/04_minimalistic.less
+++ b/theme/src/04_minimalistic.less
@@ -28,6 +28,7 @@
 @import "@fortawesome/fontawesome-free/less/fontawesome.less";
 @import "@fortawesome/fontawesome-free/less/solid.less";
 @import "@fortawesome/fontawesome-free/less/brands.less";
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif|Source+Sans+Pro&display=swap');
 
 /**
  * A responsive menu.
@@ -71,8 +72,8 @@
  */
 
 //Fonts
-@fontFamilyHeadings: @fontFamilyVerdana;
-@fontFamilyBody: @fontFamilyHelveticaNeue;
+@fontFamilyBody: "Source Sans Pro", sans-serif;
+@fontFamilyHeadings: 'Noto Serif', serif;
 @fontFamilyCode: @fontFamilyCourier;
 
 // Font size and magic number
