--- a/theme/src/layout/regions04.less
+++ b/theme/src/layout/regions04.less
@@ -11,6 +11,14 @@
     border: 1px solid darken(#f4e0e9, 20%);
 }
 
+.highlight {
+    color: @accentFontColor;
+}
+
+.rm-max .rm-small .rm-button {
+    color: @accentFontColor;
+}
+
 // .regions {
 //     .region-header-col-1,
 //     .region-header-col-2,
