--- a/theme/src/module/colorfull.less
+++ b/theme/src/module/colorfull.less
@@ -1,11 +1,9 @@
-@fontFamilyBody: serif;
-@fontFamilyHeader: serif;
 
 @colorBody: #300F8B;
 @bgColorBody: #7AC7D9;
 @bgColorHtml: #EB80BF;
-@accentBgColor: #CE0A7D;
-@accentFontColor: #300F8B;
+@accentBgColor: #300F8B;
+@accentFontColor: #CE0A7D;
 
 @lineHeight: 1.5;
 @mainFontSize: 1rem;
