--- a/htdocs/css/04_colorful.css
+++ b/htdocs/css/04_colorful.css
@@ -1,8 +1,8 @@
 /*!
 * LESS version of the stylesheet for design kmom04.
 *
-* This stylesheet is for the design course and kmom03. Its intention is to
-* use kmom01.css and lessify the style and use this as a wrapper for the new
+* This stylesheet is for the design course and kmom04. Its intention is to
+* use kmom04.css and lessify the style and use this as a wrapper for the new
 * style.
 */
 /**
@@ -4817,6 +4817,7 @@ a.rm-button.rm-clicked .rm-button-face-2 {
   left: 0;
 }
 .rm-default ul li {
+  background-color: #7AC7D9;
   box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.4);
 }
 .rm-default ul ul {
@@ -4934,7 +4935,8 @@ a.rm-button.rm-clicked .rm-button-face-2 {
 .rm-max .rm-mobile .rm-submenu-button {
   float: right;
   box-shadow: 0px 0px 1px rgba(255, 255, 255, 0.4);
-  background-color: #444;
+  background-color: #300F8B;
+  color: #7AC7D9;
   padding: 8px 24px;
   margin-right: 8px;
   margin-top: 10px;
@@ -4947,7 +4949,8 @@ a.rm-button.rm-clicked .rm-button-face-2 {
 }
 .rm-max .rm-mobile .rm-submenu-button:hover {
   text-decoration: none;
-  background-color: #ccc;
+  background-color: #300F8B;
+  color: #300F8B;
 }
 .rm-max .rm-mobile li ul {
   padding-left: 8px;
@@ -5071,7 +5074,7 @@ a.rm-button.rm-clicked .rm-button-face-2 {
   clear: both;
 }
 .wrap-all {
-  background-color: white;
+  background-color: #7AC7D9;
   width: 90%;
   margin: 0 auto;
 }
@@ -5126,11 +5129,20 @@ a.rm-button.rm-clicked .rm-button-face-2 {
   line-height: 1;
   text-align: center;
 }
+#rm-menu {
+  background-color: #7AC7D9;
+  color: #300F8B;
+}
 .rm-default li {
   display: inline-block;
 }
 .rm-mobile li {
   display: list-item;
+}
+.rm-max.rm-navbar {
+  position: absolute;
+  top: 45px;
+  right: 96px;
 }
 .region-flash {
   display: inline;
@@ -5140,7 +5152,7 @@ a.rm-button.rm-clicked .rm-button-face-2 {
   margin-right: 0.52083333%;
 }
 .outer-wrap-flash {
-  border-bottom: 5px solid #ccc;
+  border-bottom: 5px solid #EB80BF;
 }
 .region-breadcrumb {
   display: inline;
@@ -5166,7 +5178,7 @@ a.rm-button.rm-clicked .rm-button-face-2 {
   margin: 0;
 }
 .region-breadcrumb .breadcrumb-list ul a {
-  color: #333;
+  color: #300F8B;
 }
 .region-main {
   display: inline;
@@ -5239,16 +5251,20 @@ a.rm-button.rm-clicked .rm-button-face-2 {
   margin-left: 4.6875%;
 }
 .wrap-sidebar .block h4 {
-  border-top: 1px solid #ccc;
-  background-image: linear-gradient(to right, #fff, #ccc);
+  color: #CE0A7D;
+  background-image: linear-gradient(to right, #7AC7D9, #300F8B);
+}
+.wrap-sidebar .a {
+  text-decoration: none;
+  color: #CE0A7D;
 }
 .toc {
   list-style-type: none;
   padding: 0;
 }
 .outer-wrap-footer {
-  background-color: #fff;
-  border-top: 5px solid #ccc;
+  background-color: #7AC7D9;
+  border-top: 5px solid #EB80BF;
 }
 .footer-column {
   display: inline;
@@ -5259,11 +5275,11 @@ a.rm-button.rm-clicked .rm-button-face-2 {
 }
 .footer-column-1,
 .footer-column-2 {
-  border-right: 3px solid #ccc;
+  border-right: 3px solid #EB80BF;
 }
 .footer-column a {
   text-decoration: none;
-  color: #ccc;
+  color: #EB80BF;
 }
 .site-footer {
   display: inline;
@@ -5284,14 +5300,14 @@ a.rm-button.rm-clicked .rm-button-face-2 {
  */
 html {
   overflow-y: scroll;
-  background-color: #ccc;
+  background-color: #EB80BF;
 }
 body {
   margin: 0;
   padding: 0;
   padding-top: 2em;
-  color: #333;
-  font: 16px/1.5 serif;
+  color: #300F8B;
+  font: 16px/1.5 "Source Sans Pro", sans-serif;
 }
 img {
   max-width: 100%;
@@ -5302,7 +5318,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: 'Noto Serif', serif;
   margin-top: 24px;
   margin-bottom: 24px;
 }
@@ -5600,7 +5616,7 @@ hr::after {
     margin: auto;
   }
   .wrap-all {
-    background-color: white;
+    background-color: #7AC7D9;
     width: 100%;
     margin: 0 auto;
   }
@@ -5668,25 +5684,11 @@ hr::after {
   background-color: #f4e0e9;
   border: 1px solid #d995b4;
 }
-.regions .region-header-col-1,
-.regions .region-header-col-2,
-.regions .region-header-col-3,
-.regions .region-flash,
-.regions .region-breadcrumb,
-.regions .region-flash-message,
-.regions .region-columns-above,
-.regions .region-main,
-.regions .region-after-main,
-.regions .region-columns-below,
-.regions .region-sidebar-left,
-.regions .region-sidebar-right,
-.regions .region-footer,
-.regions .region-footer-column-1,
-.regions .region-footer-column-2,
-.regions .region-footer-column-3 {
-  background-color: #b5dce1;
-  border: 1px solid #6cbac4;
-  color: #111;
+.highlight {
+  color: #CE0A7D;
+}
+.rm-max .rm-small .rm-button {
+  color: #CE0A7D;
 }
 /**
  * My own settings, not currently in their own module.
