--- a/htdocs/css/04_dark.css
+++ b/htdocs/css/04_dark.css
@@ -5334,8 +5334,8 @@ h1 {
   font-size: 2.375em;
   line-height: 1.26315789;
   font-weight: normal;
-  border-bottom: 1px solid #666;
-  margin-bottom: 23px;
+  border-bottom: 3px solid #7D7C91;
+  margin-bottom: 21px;
 }
 h1 ~ h1,
 h1 ~ h2,
@@ -5352,8 +5352,8 @@ h2 {
   font-size: 1.875em;
   line-height: 1.6;
   font-weight: normal;
-  margin-bottom: 23px;
-  border-bottom: 1px solid #CCC;
+  margin-bottom: 22px;
+  border-bottom: 2px solid #7D7C91;
 }
 h2 + h3 {
   margin-top: 24px;
@@ -5362,8 +5362,8 @@ h3 {
   font-size: 1.75em;
   line-height: 1.71428571;
   font-weight: normal;
-  margin-bottom: 23px;
-  border-bottom: 1px solid #EEE;
+  margin-bottom: 22px;
+  border-bottom: 2px solid #7D7C91;
 }
 h3 + h4 {
   margin-top: 24px;
@@ -5373,7 +5373,7 @@ h4 {
   line-height: 1;
   font-weight: normal;
   margin-bottom: 23px;
-  border-bottom: 1px solid #EEE;
+  border-bottom: 1px solid #7D7C91;
 }
 h4 + h5 {
   margin-top: 24px;
@@ -5382,7 +5382,7 @@ h5 {
   font-size: 1.25em;
   line-height: 1.2;
   margin-bottom: 23px;
-  border-bottom: 1px solid #EEE;
+  border-bottom: 1px solid #7D7C91;
 }
 h5 + h6 {
   margin-top: 24px;
@@ -5391,7 +5391,7 @@ h6 {
   font-size: 1.25em;
   line-height: 1.2;
   margin-bottom: 23px;
-  border-bottom: 1px solid #EEE;
+  border-bottom: 1px solid #7D7C91;
 }
 p {
   margin-bottom: 24px;
