--- a/theme/src/@desinax/typographic-grid/less/typography-defaults.less
+++ b/theme/src/@desinax/typographic-grid/less/typography-defaults.less
@@ -19,15 +19,15 @@
 @fontSizeH6: 1.25em;
 
 // header h1-h6 borders
-@colorH1BorderBottom: #666;
-@colorH2BorderBottom: #CCC;
-@colorH3BorderBottom: #EEE;
-@colorH4BorderBottom: #EEE;
-@colorH5BorderBottom: #EEE;
-@colorH6BorderBottom: #EEE;
-@borderSizeH1: 1px;
-@borderSizeH2: 1px;
-@borderSizeH3: 1px;
+@colorH1BorderBottom: @colorBody;
+@colorH2BorderBottom: @colorBody;
+@colorH3BorderBottom: @colorBody;
+@colorH4BorderBottom: @colorBody;
+@colorH5BorderBottom: @colorBody;
+@colorH6BorderBottom: @colorBody;
+@borderSizeH1: 3px;
+@borderSizeH2: 2px;
+@borderSizeH3: 2px;
 @borderSizeH4: 1px;
 @borderSizeH5: 1px;
 @borderSizeH6: 1px;
