--- a/theme/src/kmom06-designprinciper.less
+++ b/theme/src/kmom06-designprinciper.less
@@ -1,7 +1,7 @@
 /*!
-* LESS version of the stylesheet for design kmom05.
+* LESS version of the stylesheet for design kmom06.
 *
-* This stylesheet is for the design course and kmom05. Its intention is to
+* This stylesheet is for the design course and kmom06. Its intention is to
 * use kmom04.css and lessify the style and use this as a wrapper for the new
 * style.
 */
@@ -50,7 +50,7 @@
 * Import the vertical grid.
 */
 @import "@desinax/vertical-grid/less/grid.less";
-@import "layout/vgrid04.less";
+@import "layout/vgrid06.less";
 
 @import "module/blogg.less";
 
@@ -63,7 +63,7 @@
 /**
  * Base style to affect HTML elements on a general scale.
  */
-@import "base/basekmom04.less";
+@import "base/basekmom06.less";
 
 /**
  * Layout style for general structure of header, navbar, main, footer
@@ -72,6 +72,7 @@
 
 @import "layout/responsive_kmom04.less";
 @import "layout/regions04.less"; // To add style for ?regions
+@import "layout/designprinciper.less";
 
 /**
  * My own settings, not currently in their own module.
